[package]
name = "MrSablier"
version = "0.1.0"
edition = "2021"
authors = ["adrena.corto@gmail.com"]
homepage = "https://github.com/AdrenaFoundation/MrSablier"
repository = "https://github.com/AdrenaFoundation/MrSablier"
license = "Apache-2.0"
keywords = ["sablier", "solana", "grpc", "rust", "adrena"]
publish = true

[[bin]]
path = "./src/client.rs"
name = "mrsablier"


[dependencies]
anyhow = "1.0.62"
borsh = "1.5.1"
backoff = { version = "0.4.0", features = ["tokio"] }
bincode = "1.3.3"
bs58 = "0.5.1"
chrono = "0.4.26"
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.24"
hex = "0.4.3"
log = "0.4.17"
maplit = "1.0.2"
serde_json = "1.0.86"
solana-sdk = "~2.0.0"
solana-transaction-status = "~2.0.0"
solana-client = "~2.0.0"
solana-account-decoder = "~2.0.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
tonic = "0.12.1"
yellowstone-grpc-client = "2.0.0"
yellowstone-grpc-proto = { version = "2.0.0", default-features = true }
sha2 = "0.10.8"
num-traits = "0.2.19"
# adrena = { git = "ssh://git@github.com/AdrenaFoundation/adrena.git", features = [
#     "no-entrypoint",
# ] }
# pyth-solana-receiver-sdk = "=0.3.1" // Build issue

[profile.release]
lto = true
codegen-units = 1

# https://github.com/anza-xyz/agave/blob/v2.0.4/Cargo.toml#L502-L533
[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
